fix gap in css

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 
 a {
   text-decoration: none;
-  color:lightskyblue;
+  color: lightskyblue;
 }
 
 .body {
@@ -116,6 +116,7 @@ a {
   background-image: url(img/arrow-right.svg);
   margin-left: 5px;
 }
+
 .photo__switcher-hover {
   background-image: none;
   border: none;
@@ -127,8 +128,8 @@ a {
   border: none;
   cursor: none;
   margin-right: 5px;
-  width:25px;
-  height:25px;
+  width: 25px;
+  height: 25px;
   opacity: 0;
 }
 
@@ -203,7 +204,7 @@ a {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 10px;
+  gap: 5px;
 }
 
 .data__item {
